--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,9 +1,11 @@
-<%= form_tag coupons_path do %>
-<label>Coupon Form</label>
-<label>Coupon Code: </label>
-<%= text_field_tag :"coupon[coupon_code]" %><br>
-<label>Store: </label>
-<%= text_field_tag :"coupon[store]" %><br>
-<%= submit_tag "Submit Coupon" %>
+<h1>Coupon Form</h1>
 
-<% end %>
+ <%= form_tag coupons_path do %>
+    <label>Store:</label><br>
+    <%= text_field_tag :'coupon[store]' %><br>
+
+     <label>Coupon Code:</label><br>
+    <%= text_field_tag :'coupon[coupon_code]' %><br>
+
+     <%= submit_tag "Submit Coupon" %>
+  <% end %>
